added styles, length of the input

--- a/src/style.css
+++ b/src/style.css
@@ -161,11 +161,19 @@ main {
     border-radius: 10px;
 }
 
+#task-window-header {
+    font-weight: 900;
+    font-family: 'Urbanist';
+    color: black;
+}
+
+
+
 #project-window {
     justify-content: space-between;
 }
 
-#project-window.active, #task-window.active{
+#project-window.active, #task-window.active {
     display:flex;
     z-index: 1;
 }
@@ -178,6 +186,18 @@ main {
     font-family: 'Urbanist', sans-serif;
     font-weight: 500;
     color: black;
+    text-align: center;
+}
+
+#task-title, #notes, #dealine, #project-title {
+    margin: 10px;
+    border: none;
+    border-radius: 5px;
+    height: 15%;
+}
+
+#task-title:valid, #notes:valid, #dealine:valid {
+    outline: var(--correct-input-outline-color);
 }
 
 [class ^= "task-"].category{
@@ -285,12 +305,13 @@ main {
     width: 50%;
 }
 
-.complete-task-btn, .delete-task-btn {
+.complete-task-btn, .delete-task-btn, #create-task-btn, #create-project-btn {
     color: white;
     background-color: var(--accent-color);
     border: none;
     border-radius: 7px;
     width: 40%;
+    margin: 10px;
     aspect-ratio: 3/1;
 }
 
@@ -318,3 +339,4 @@ main {
     height: 5%;
     border:none;
 }
+
